Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 10.3
-
Component/s: Storage Engine - Spider
-
Labels:None
Description
As we did
CREATE TABLE test.t (c INT) PARTITION BY LIST COLUMNS (c) (PARTITION p DEFAULT ENGINE=SPIDER);
|
With the debug server started we do
mysql test
|
The server crashes in my_eof()
:0(_GI__assert_fail)[0x7ffcb3d6f532]
addr2line: 'sql/mysqld': No such file
sql/mysqld(_ZN16Diagnostics_area14set_eof_statusEP3THD+0x9f)[0x7ffcb62d8fb3]
sql/mysqld(_Z6my_eofP3THD+0x3d)[0x7ffcb6213478]
sql/mysqld(_Z18mysqld_list_fieldsP3THDP10TABLE_LISTPKc+0x283)[0x7ffcb63c5dc6]
sql/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0x1b72)[0x7ffcb631fe4a]
sql/mysqld(_Z10do_commandP3THD+0x753)[0x7ffcb631dc32]
sql/mysqld(_Z24do_handle_one_connectionP7CONNECT+0x1d2)[0x7ffcb649bd6f]
It passes if we do
mysql -A test
|
But the result of SHOW FIELDS is weird.
MariaDB [test]> show fields from test.t;
|
ERROR 1429 (HY000): Unable to connect to foreign data source: localhost |
MariaDB [test]> show fields from test.t;
|
+-------+---------+------+-----+---------+-------+
|
| Field | Type | Null | Key | Default | Extra |
|
+-------+---------+------+-----+---------+-------+
|
| c | int(11) | YES | | NULL | | |
+-------+---------+------+-----+---------+-------+
|
1 row in set (0.00 sec) |
|